fixes alignment on prize page

--- a/_assets/stylesheets/_base.scss
+++ b/_assets/stylesheets/_base.scss
@@ -173,10 +173,9 @@ div.prize-icon {
 }
 
 div.prize-icon img {
-    margin: 0px;
+    padding-top: 1em;
     max-height: 150px;
     max-width: 150px;
-    padding-right: 1em; 
 }
 
 .rule-short {
